# discord-social-tui

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
includes/app/: app.hpp  buttons.hpp  friend.hpp  messages.hpp  presence.hpp  profile.hpp  voice.hpp
lib/: README.md  app.cpp  app.hpp
src/: main.cpp
src/app/: app.cpp  buttons.cpp  friend.cpp  messages.cpp  presence.cpp  profile.cpp  voice.cpp
